feat: adding validation field and handle response validation error
