# pkg/dto/product_dto.go
@@ -3,9 +3,9 @@ package dto
 import "kasir-api/pkg/domain"
 
 type ProductRequest struct {
-	Name  string `json:"name"`
-	Price int    `json:"price"`
-	Stock int    `json:"stock"`
+	Name  string `json:"name" validate:"required,min=1"`
+	Price int    `json:"price" validate:"required,number"`
+	Stock int    `json:"stock" validate:"required,number"`
 }
 
 func ProductReqToDomain(req *ProductRequest) *domain.Product {
